--- a/configs/dataset/fetal.yaml
+++ b/configs/dataset/fetal.yaml
@@ -2,15 +2,60 @@
 # defaults:
 #   - preprocess
 
+# TODO: Make different versions for Real/Simple/Synth dataset
 _target_: fetalsyngen.dataset.fetal.FetalSynthDataset
 bids_path: ./data
-seed_path: null
+seed_path: ./data/derivatives/seeds # TODO: make clear that by setting this to none intensity image wull bee used as intesity prior
 sub_list: null
-generator:
-  _target_: fetalsyngen.generator.SynthGen
-  param1: 10
-
-
+load_image: True
 # transforms from the preprocess.yaml file
 # can be overridden here
 # transforms: null
+
+
+generator:
+  _target_: fetalsyngen.generator.SynthGen
+  
+  image_seed_generator:
+    _target_: fetalsyngen.intensity.seed_sampler.ImageFromSeeds
+    min_subclusters: 1
+    max_subclusters: 3
+    seed_labels: [0, 10, 11, 12, 13, 14, 15, 16, 17, 18, 19, 20, 21, 22, 23, 24, 25, 26, 27, 28, 29, 30, 31, 32, 33, 34, 35, 36, 37, 38, 39, 40, 41, 42, 43, 44, 45, 46, 47, 48, 49]
+    # generation_classes: [0, 10, 11, 12, 13, 14, 15, 16, 17, 18, 19, 20, 21, 22, 23, 24, 25, 26, 27, 28, 29, 30, 31, 32, 33, 34, 35, 36, 37, 38, 39, 40, 41, 42, 43, 44, 45, 46, 47, 48, 49]
+    generation_classes: [0, 10, 10, 10, 10, 10, 10, 10, 10, 10, 10, 20, 20, 20, 20, 20, 20, 20, 20, 20, 20, 30, 30, 30, 30, 30, 30, 30, 30, 30, 30, 40, 41, 42, 43, 44, 45, 46, 47, 48, 49] # [0, 10, 11, 12, 13, 14, 15, 16, 17, 18, 19, 20, 21, 22, 23, 24, 25, 26, 27, 28, 29, 30, 31, 32, 33, 34, 35, 36, 37, 38, 39, 40, 41, 42, 43, 44, 45, 46, 47, 48, 49] # ##
+
+  
+  spatial_deform:
+    _target_: fetalsyngen.deformation.affine_nonrigid.SpatialDeformation
+    size: [256, 256, 256]
+    max_rotation: 20
+    max_shear: 0.02
+    max_scaling: 0.1
+
+    nonlinear_transform: True
+    nonlin_scale_min: 0.03
+    nonlin_scale_max: 0.06
+    nonlin_std_max: 4
+
+    
+    
+  image_augmenter:
+    
+    # _target_: fetalsyngen.generator.ImageAugmenter
+      
+    bias_field:
+      # _target_: monai.transforms.BiasField
+      coeff_range: [0.1, 0.3]
+      scale_range: [0.1, 0.3]
+      prob: 0.5
+    
+    gamma:
+      # _target_: monai.transforms.Gamma
+      gamma_range: [0.7, 1.5]
+      prob: 0.5
+    
+    noise:
+      # _target_: monai.transforms.Noise
+      mean: 0.0
+      std: 0.1
+      prob: 0.5
