--- a/configs/dataset/fetal.yaml
+++ b/configs/dataset/fetal.yaml
@@ -15,7 +15,11 @@ load_image: True
 
 generator:
   _target_: fetalsyngen.generator.SynthGen
-  
+
+  shape: [256, 256, 256] # TODO: Note that this is input/output
+  resolution: [0.5, 0.5, 0.5]
+  device: cuda
+
   image_seed_generator:
     _target_: fetalsyngen.intensity.seed_sampler.ImageFromSeeds
     min_subclusters: 1
@@ -24,7 +28,6 @@ generator:
     # generation_classes: [0, 10, 11, 12, 13, 14, 15, 16, 17, 18, 19, 20, 21, 22, 23, 24, 25, 26, 27, 28, 29, 30, 31, 32, 33, 34, 35, 36, 37, 38, 39, 40, 41, 42, 43, 44, 45, 46, 47, 48, 49]
     generation_classes: [0, 10, 10, 10, 10, 10, 10, 10, 10, 10, 10, 20, 20, 20, 20, 20, 20, 20, 20, 20, 20, 30, 30, 30, 30, 30, 30, 30, 30, 30, 30, 40, 41, 42, 43, 44, 45, 46, 47, 48, 49] # [0, 10, 11, 12, 13, 14, 15, 16, 17, 18, 19, 20, 21, 22, 23, 24, 25, 26, 27, 28, 29, 30, 31, 32, 33, 34, 35, 36, 37, 38, 39, 40, 41, 42, 43, 44, 45, 46, 47, 48, 49] # ##
 
-  
   spatial_deform:
     _target_: fetalsyngen.deformation.affine_nonrigid.SpatialDeformation
     size: [256, 256, 256]
@@ -37,25 +40,27 @@ generator:
     nonlin_scale_max: 0.06
     nonlin_std_max: 4
 
-    
-    
-  image_augmenter:
-    
-    # _target_: fetalsyngen.generator.ImageAugmenter
-      
-    bias_field:
-      # _target_: monai.transforms.BiasField
-      coeff_range: [0.1, 0.3]
-      scale_range: [0.1, 0.3]
-      prob: 0.5
-    
-    gamma:
-      # _target_: monai.transforms.Gamma
-      gamma_range: [0.7, 1.5]
-      prob: 0.5
-    
-    noise:
-      # _target_: monai.transforms.Noise
-      mean: 0.0
-      std: 0.1
-      prob: 0.5
+  rand_resample:
+    _target_: fetalsyngen.augmentation.synthseg_augm.RandResample
+    min_resolution: 1.9
+    max_resolution: 2
+    prob: 0
+
+  rand_biasfield:
+    _target_: fetalsyngen.augmentation.synthseg_augm.RandBiasField
+    prob: 0
+    scale_min: 0.004 
+    scale_max: 0.02
+    std_min:  0.01
+    std_max: 0.3
+
+  rand_gamma:
+    _target_: fetalsyngen.augmentation.synthseg_augm.RandGamma
+    prob: 0
+    gamma_std: 0.1
+
+  rand_noise:
+    _target_: fetalsyngen.augmentation.synthseg_augm.RandNoise
+    prob: 0
+    std_min: 5
+    std_max: 15
