--- a/configs/dataset/generator/default.yaml
+++ b/configs/dataset/generator/default.yaml
@@ -1,4 +1,4 @@
-_target_: fetalsyngen.generator.generator.SynthGen
+_target_: fetalsyngen.generator.model.SynthGen
 
 shape: [256, 256, 256] # TODO: Note that this is input/output
 resolution: [0.5, 0.5, 0.5]
