--- a/configs/dataset/generator/default.yaml
+++ b/configs/dataset/generator/default.yaml
@@ -1,10 +1,10 @@
-_target_: fetalsyngen.generator.model.SynthGen
+_target_: fetalsyngen.generator.model.FetalSynthGen
 
 shape: [256, 256, 256] # TODO: Note that this is input/output
 resolution: [0.5, 0.5, 0.5]
 device: cuda # cuda ~6x faster than cpu
 
-image_seed_generator:
+intensity_generator:
   _target_: fetalsyngen.generator.intensity.rand_gmm.ImageFromSeeds
   min_subclusters: 1
   max_subclusters: 3
@@ -14,8 +14,10 @@ image_seed_generator:
 
 spatial_deform:
   _target_: fetalsyngen.generator.deformation.affine_nonrigid.SpatialDeformation
-  device: "${..device}" # uses teh device from the generator
-  size: [256, 256, 256]
+  device: "${..device}" # uses the device from the generator
+  size: ${..shape} # uses the shape from the generator
+  flip_prb: 0.5
+
   max_rotation: 20
   max_shear: 0.02
   max_scaling: 0.1
@@ -25,13 +27,13 @@ spatial_deform:
   nonlin_scale_max: 0.06
   nonlin_std_max: 4
 
-rand_resample:
+resampler:
   _target_: fetalsyngen.generator.augmentation.synthseg.RandResample
   min_resolution: 1.9
   max_resolution: 2
   prob: 1
 
-rand_biasfield:
+bias_field:
   _target_: fetalsyngen.generator.augmentation.synthseg.RandBiasField
   prob: 1
   scale_min: 0.004 
@@ -39,12 +41,12 @@ rand_biasfield:
   std_min:  0.01
   std_max: 0.3
 
-rand_gamma:
+gamma:
   _target_: fetalsyngen.generator.augmentation.synthseg.RandGamma
   prob: 1
   gamma_std: 0.1
 
-rand_noise:
+noise:
   _target_: fetalsyngen.generator.augmentation.synthseg.RandNoise
   prob: 1
   std_min: 5
