--- a/configs/dataset/generator/default.yaml
+++ b/configs/dataset/generator/default.yaml
@@ -1,8 +1,8 @@
 _target_: fetalsyngen.generator.model.FetalSynthGen
 
-shape: [256, 256, 256] # TODO: Note that this is input/output
+shape: [256, 256, 256] # TODO: Separate input from output shapes
 resolution: [0.5, 0.5, 0.5]
-device: cuda # cuda ~6x faster than cpu
+device: cuda:1 # cuda ~6x faster than cpu
 
 intensity_generator:
   _target_: fetalsyngen.generator.intensity.rand_gmm.ImageFromSeeds
