--- a/configs/dataset/synth_train.yaml
+++ b/configs/dataset/synth_train.yaml
@@ -2,8 +2,8 @@ defaults:
   - generator/default
 
 _target_: fetalsyngen.data.datasets.FetalSynthDataset
-bids_path: ./data
-seed_path: ./data/derivatives/seeds
+bids_path: /media/vzalevskyi/data/fetal_dHCP/derivatives/derivatives/resampled05 #./data
+seed_path: /media/vzalevskyi/data/fetal_dHCP/derivatives/derivatives/seeds #./data/derivatives/seeds
 sub_list: null
 load_image: False
 image_as_intensity: False
