--- a/configs/dataset/generator/default.yaml
+++ b/configs/dataset/generator/default.yaml
@@ -2,7 +2,7 @@ _target_: fetalsyngen.generator.model.FetalSynthGen
 
 shape: [256, 256, 256] # TODO: Separate input from output shapes
 resolution: [0.5, 0.5, 0.5]
-device: cuda:1 # cuda ~6x faster than cpu
+device: cuda:0 # cuda ~6x faster than cpu
 
 intensity_generator:
   _target_: fetalsyngen.generator.intensity.rand_gmm.ImageFromSeeds
@@ -53,3 +53,64 @@ noise:
   prob: 1
   std_min: 5
   std_max: 15
+
+blur_cortex:
+  _target_: fetalsyngen.generator.augmentation.artifacts.BlurCortex
+  prob: 1.0 # 0.4
+  cortex_label: 2
+  nblur_min: 50
+  nblur_max: 200
+
+struct_noise:
+  _target_: fetalsyngen.generator.augmentation.artifacts.StructNoise
+  prob: 1.0 # 0.4
+  wm_label: 3
+  std_min: 0.3
+  std_max: 0.6
+  nloc_min: 5
+  nloc_max: 15
+
+simulate_motion:
+  _target_: fetalsyngen.generator.augmentation.artifacts.SimulateMotion
+  prob: 0.4
+  scanner_params:
+    _target_: fetalsyngen.generator.artifacts.utils.ScannerParams
+    resolution_slice_fac_min: 0.5
+    resolution_slice_fac_max: 2
+    resolution_slice_max: 1.5
+    slice_thickness_min: 1.5
+    slice_thickness_max: 3.5
+    gap_min: 1.5
+    gap_max: 8.5
+    min_num_stack: 2
+    max_num_stack: 6
+    max_num_slices: 250
+    noise_sigma_min: 0
+    noise_sigma_max: 0.1
+    TR_min: 1
+    TR_max: 2
+    prob_gamma: 0.1
+    gamma_std: 0.05
+    prob_void: 0.2
+    slice_size: None
+    restrict_transform: False
+    txy: 3.0
+  recon_params:
+    _target_: fetalsyngen.generator.artifacts.utils.ReconParams
+    prob_misreg_slice: 0.1
+    slices_misreg_ratio: 0.1
+    prob_misreg_stack: 0.1
+    txy: 5
+    prob_merge: 0.8
+    merge_ngaussians_min: 1
+    merge_ngaussians_max: 4
+    prob_smooth: 0.3
+    prob_rm_slices: 0.3
+    rm_slices_min: 0.5
+    rm_slices_max: 0.98
+
+boundaries:
+  _target_: fetalsyngen.generator.augmentation.artifacts.SimulatedBoundaries
+  prob_no_mask: 1.
+  prob_halo: 0.5
+  prob_fuzzy: 0.5
