--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -12,7 +12,7 @@ plugins:
     handlers:
       python:
         options:
-          show_source: false
+          show_source: true
           members_order: source
           relative_crossrefs: true
 
