--- a/configs/dataset/generator/default.yaml
+++ b/configs/dataset/generator/default.yaml
@@ -4,6 +4,52 @@ shape: [256, 256, 256] # TODO: Separate input from output shapes
 resolution: [0.5, 0.5, 0.5]
 device: cuda:0 # cuda ~6x faster than cpu
 
+cc_alteration:
+  _target_: fetalsyngen.generator.alterations.ccAlterations.cc_Alterations
+  alteration_prob: 0.6
+  target_label: 8 # Corpus Callosum label
+  min_dilation: 1
+  max_dilation: 3 # depends on brain volume ratio
+  min_erosion: 2
+  max_erosion: 3
+  min_posterior_loss: 0.25
+  max_posterior_loss: 0.8
+  min_anterior_loss: 0.2
+  max_anterior_loss: 0.5
+  min_amplitude_kinked: 1
+  max_amplitude_kinked: 4
+  min_freq_kinked: 3
+  max_freq_kinked: 23 # depends on brain length ratio
+  cc_alter_prob: [0.2, 0.2, 0.2, 0.2, 0.2]
+  brain_alterations: 
+    _target_: fetalsyngen.generator.alterations.brainAlterations.brain_Alterations
+    alteration_prob: 0.6
+    cortex_label: 2
+    csf_label: 1
+    wm_label: 3
+    ventri_label: 4
+    cerebellum_label: 5
+    deep_gm_label: 6
+    brainstem_label: 7
+    cc_label: 8
+    min_size_smooth: 1
+    max_size_smooth: 5
+    min_iter_smooth: 1
+    max_iter_smooth: 3
+    min_size_thick: 1
+    max_size_thick: 2
+    min_size_thin: 1
+    ventri_max_strength: 1.5
+    ventri_min_strength: 0.5
+    ventri_max_radius: 0.45 # depends on max_ratio
+    ventri_min_radius: 0.3 # depends on max_ratio
+    left_ventri: 0
+    right_ventri: 0
+    bilateral_ventri: 0
+    min_size_hypo: 1
+    brain_alter_prob: [0.1, 0.1, 0.1, 0.6, 0.1]
+
+
 intensity_generator:
   _target_: fetalsyngen.generator.intensity.rand_gmm.ImageFromSeeds
   min_subclusters: 1
